# libtcod-fov

./: CMakeLists.txt  vcpkg.json
.github/workflows/: builds.yml
buildsys/autotools/: Makefile.am  get_version.py  sources.am
data/: pillars.txt
docs/base-toolkits/: line_drawing.rst
include/: libtcod-fov.h
include/libtcod-fov/: bresenham.h  bresenham.hpp  dda.h  fov_pascal.h  fov_triage.h  fov_types.h  libtcod_int.h  map.hpp  map_inline.h  map_types.h
scripts/: pyproject.toml  tag_release.py  update_copyrights.py  update_sources.py
src/: CMakeLists.txt  libtcod-fovConfig.cmake.in  sources.cmake
src/fovtool/: CMakeLists.txt  main.cpp
src/libtcod-fov/: bresenham_c.c  dda.c  fov.h  fov.hpp  fov_c.c  fov_circular_raycasting.c  fov_diamond_raycasting.c  fov_pascal.c  fov_permissive2.c  fov_recursive_shadowcasting.c  fov_restrictive.c  fov_symmetric_shadowcast.c  fov_triage.c  libtcod_int.h  map_inline.h  utility.h
tests/: CMakeLists.txt  test_bresenham.cpp  test_fov.cpp  test_logging.cpp  test_los.cpp  unittest.cpp
